Private 1-1 user chats

--- a/BLAZAMGui/Layouts/AppFooter.razor
+++ b/BLAZAMGui/Layouts/AppFooter.razor
@@ -13,10 +13,11 @@
                 </MudTooltip>
             }
             <MudSpacer/>
+@*
     <MudTooltip Class="mud-theme-info" Style="width:max-content" Text="@ApplicationInfo.RunningVersion.Version">
 
             Version: @ApplicationInfo.RunningVersion.ShortVersion
-            </MudTooltip>
+            </MudTooltip>*@
 
 
 </MudStack>
