--- a/BLAZAMGui/Copyright.razor
+++ b/BLAZAMGui/Copyright.razor
@@ -1,7 +1,8 @@
 ﻿@inherits MudText
+@inject ApplicationInfo ApplicationInfo
 <MudText Class="@Class" 
      style="cursor:pointer; width:max-content" Color="Color.Tertiary">
-    <MudTooltip ShowOnHover=false ShowOnClick=true Style="width:max-content" Text="Written by Chris Jacobsen">
+    <MudTooltip ShowOnHover=false ShowOnClick=true Style="width:max-content" Text="@ApplicationInfo.RunningVersion.Version">
         BLAZAM&#8482; @DateTime.Now.Year
     </MudTooltip>
 
