--- a/BLAZAMGui/UI/Chat/AppChat.razor
+++ b/BLAZAMGui/UI/Chat/AppChat.razor
@@ -11,7 +11,7 @@
     var otherViewers = Viewers[ChatUri].Where(us => !us.Equals(currentUserState));
 }
 
-<MudPopover Style="width:356px;"
+<MudPopover Style="width:356px;min-height:450px;"
             Open="@_chatOpen"
             Fixed="true"
             Square=true
@@ -36,6 +36,7 @@
             <MudNavLink Icon="@Icons.Material.Filled.EnhancedEncryption">Private Chats</MudNavLink>
             <MudNavGroup Icon="@Icons.Material.Filled.Group"
                          Title="Users"
+                         Class="mb-16"
                          Expanded=_usersExpanded
                          ExpandedChanged=@ChangeUsersExpanded>
                 @{
@@ -46,7 +47,7 @@
 
                     @foreach (var user in onlineUsers)
                     {
-                        <MudNavLink>@user.Username</MudNavLink>
+                        <MudNavLink OnClick="@(()=>{OpenPrivateChat(user.Preferences);})">@user.Username</MudNavLink>
                     }
                 </MudNavGroup>
 
@@ -129,7 +130,7 @@
         //Setup other viewers button listeners
         ViewersChanged += (async () =>
        {
-           await RefreshChatRooms();
+           //await RefreshChatRooms();
 
            await InvokeAsync(StateHasChanged);
 
