--- a/BLAZAM/Pages/Groups/ViewGroup.razor
+++ b/BLAZAM/Pages/Groups/ViewGroup.razor
@@ -59,7 +59,7 @@
     </Section>
 
     <Section Style="min-height:200px;" Title="Members">
-        @*<GroupMembersDataGrid Group="Group"/>*@
+        <GroupMembersDataGrid Group="Group"/>
             
     </Section>
        
