--- a/BLAZAMGui/Layouts/MainLayout.razor
+++ b/BLAZAMGui/Layouts/MainLayout.razor
@@ -73,8 +73,8 @@
                     </MudContainer>
 
                 </MudMainContent>
-                <MudAppBar DisableGutters=true Bottom=true Dense=true Color=Color.Dark Elevation="1">
-                    <MudStack Class="mud-width-full pa-0 ma-0" Row=true>
+                <MudAppBar Style="height:30px;" DisableGutters=true Bottom=true Dense=true Color=Color.Dark Elevation="1">
+                    <MudStack Class="mud-width-full pa-0 ma-0 ps-3" Row=true>
                         <AppFooter Class="align-middle"/>
                         
                         @*<AppChat/>*@
