--- a/BLAZAM/Pages/Search.razor
+++ b/BLAZAM/Pages/Search.razor
@@ -1,5 +1,6 @@
 ﻿@page "/search"
 @page "/search/{SearchTermParameter}"
+@using BLAZAM.Pages.Printers
 
 @inherits AppComponentBase
 @attribute [Authorize(Roles = (UserRoles.SearchOUs + ","+UserRoles.SearchComputers + ","+UserRoles.SearchGroups + "," +UserRoles.SearchUsers + "," + UserRoles.SuperAdmin))]
@@ -60,21 +61,7 @@
             }
             else
             {
-                @switch (result.ObjectType)
-                {
-                    case ActiveDirectoryObjectType.User:
-                        <ViewUser DirectoryEntry="result" />
-                        break;
-                    case ActiveDirectoryObjectType.Group:
-                        <ViewGroup DirectoryEntry="result" />
-                        break;
-                    case ActiveDirectoryObjectType.Computer:
-                        <ViewComputer DirectoryEntry="result" />
-                        break;
-                    case ActiveDirectoryObjectType.OU:
-                        <ViewOU  DirectoryEntry="result" />
-                        break;
-                }
+              <ViewDirectoryEntry DirectoryEntry="result"/>
             }
         }
         @*        else
