--- a/BLAZAMGui/Navs/NavMenu.razor
+++ b/BLAZAMGui/Navs/NavMenu.razor
@@ -15,6 +15,7 @@
 
         </MudStack>
         <MudNavLink Href="/home" Icon="@Icons.Material.Filled.Dashboard">@AppLocalization["Home"]</MudNavLink>
+        <MudNavLink Href="/browse" Icon="@Icons.Material.Filled.ViewList">@AppLocalization["Browse"]</MudNavLink>
         <AuthorizeView Context="createContext" Roles=@createRole>
             <MudNavGroup Icon="@Icons.Material.Filled.Create" Title="@AppLocalization["Create"]" Expanded="false" Disabled=@(Monitor.DirectoryConnected != ServiceConnectionState.Up)>
                 <AuthorizeView Roles="@UserRoles.CreateUsers">
