--- a/BLAZAMGui/UI/Chat/PageSpecificChat.razor
+++ b/BLAZAMGui/UI/Chat/PageSpecificChat.razor
@@ -19,7 +19,7 @@
             Open="@_chatOpen"
             Fixed="true"
             Class="px-1 pt-4">
-    <AppChatRoom ChatUri="@ChatUri"
+    <AppChatRoom 
                  OnCloseClicked=@(()=>{_chatOpen=!_chatOpen;})
                  ChatRoom="ChatRoom" />
 </MudPopover>
@@ -41,6 +41,7 @@
     /// viewer on every page this component is placed
     /// </summary>
     static Dictionary<string, List<IApplicationUserState>> Viewers = new Dictionary<string, List<IApplicationUserState>>();
+    static Dictionary<string, ChatRoom> ChatRooms = new Dictionary<string, ChatRoom>();
 
     delegate void CallbackEvent();
     static CallbackEvent ViewersChanged;
@@ -72,14 +73,20 @@
               }
           });
         }
+        var chatRoom = ChatRooms.Where(cr=>cr.Key.Equals(ChatUri)).Select(cr=>cr.Value).FirstOrDefault();
+        if (chatRoom is null)
+        {
+            chatRoom = new() { CreatedAt = DateTime.Now, IsPublic = true, Name=ChatUri };
+            ChatRooms.Add(ChatUri,chatRoom);
+        }
+        ChatRoom = chatRoom;
 
-
-        await RefreshChatRooms();
+       // await RefreshChatRooms();
 
         //Setup other viewers button listeners
         ViewersChanged += (async () =>
        {
-           await RefreshChatRooms();
+          // await RefreshChatRooms();
 
            await InvokeAsync(StateHasChanged);
 
