--- a/BLAZAMGui/UI/Outputs/ADTreeView.razor
+++ b/BLAZAMGui/UI/Outputs/ADTreeView.razor
@@ -3,7 +3,7 @@
 <MudText>@Label</MudText>
 
 <MudTreeView 
-    T="IADOrganizationalUnit"
+    T="IDirectoryEntryAdapter"
              ServerData="GetChildrenAsync"
              Items="RootOU"
              Dense="true"
@@ -13,14 +13,14 @@
              @bind-SelectedValue="SelectedOU">
     <ItemTemplate>
         <MudTreeViewItem Value="@context"
-             Items=@(context.IsExpanded?context.TreeViewSubOUs:context.CachedTreeViewSubOUs)
+                         Items=@(context.CachedChildren.ToHashSet())
                          LoadingIconColor="Color.Info"
                          @bind-Expanded="@context.IsExpanded"
                           @bind-Activated=context.IsSelected
                          Text="@context.CanonicalName"
-                         Icon="@Icons.Material.Filled.Folder"
-                         Class="minw-max w-100"
-                         CanExpand=context.HasChildren()
+                         Icon="@context.TypeIcon()"
+                         Class="minw-max w-100 overflow-x-auto"
+                         CanExpand=@(context.HasChildren)
                          EndText="@EndText?.Invoke(context)">
             @*<Content>
             @{
@@ -63,7 +63,6 @@
 
 @code {
     #nullable disable warnings
-    Dictionary<IADOrganizationalUnit, bool> OULoadingStates = new();
 
     [Parameter]
     public bool StartRootExpanded { get; set; } = true;
@@ -71,7 +70,7 @@
     [Parameter]
     public string? Label { get; set; }
     [Parameter]
-    public Func<IADOrganizationalUnit, string>? EndText { get; set; }
+    public Func<IDirectoryEntryAdapter, string>? EndText { get; set; }
 
 
     [Parameter]
@@ -79,12 +78,12 @@
 
 
     [Parameter]
-    public RenderFragment<IADOrganizationalUnit>? EndAdornment { get; set; }
+    public RenderFragment<IDirectoryEntryAdapter>? EndAdornment { get; set; }
 
-    IADOrganizationalUnit? _selectedNode;
+    IDirectoryEntryAdapter? _selectedNode;
 
     [Parameter]
-    public HashSet<IADOrganizationalUnit> RootOU { get; set; } = new HashSet<IADOrganizationalUnit>();
+    public HashSet<IDirectoryEntryAdapter> RootOU { get; set; } = new HashSet<IDirectoryEntryAdapter>();
 
 
     IADOrganizationalUnit? _startingSelectedNode;
@@ -104,13 +103,13 @@
     }
 
     [Parameter]
-    public EventCallback<IADOrganizationalUnit> StartingSelectedOUChanged
+    public EventCallback<IDirectoryEntryAdapter> StartingSelectedOUChanged
     {
         get; set;
     }
 
     [Parameter]
-    public IADOrganizationalUnit? SelectedOU
+    public IDirectoryEntryAdapter? SelectedOU
     {
         get => _selectedNode; set
         {
@@ -128,15 +127,15 @@
     }
 
     [Parameter]
-    public EventCallback<IADOrganizationalUnit> SelectedOUChanged { get; set; }
+    public EventCallback<IDirectoryEntryAdapter> SelectedOUChanged { get; set; }
 
     ADOrganizationalUnit TopLevel;
 
 
-    MudTreeView<IADOrganizationalUnit>? OUTree { get; set; }
+    MudTreeView<IDirectoryEntryAdapter>? OUTree { get; set; }
 
 
-    IList<IADOrganizationalUnit> ExpandedNodes = new List<IADOrganizationalUnit>();
+    IList<IDirectoryEntryAdapter> ExpandedNodes = new List<IDirectoryEntryAdapter>();
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
@@ -161,7 +160,7 @@
             TopLevel = new ADOrganizationalUnit();
             await TopLevel.Parse(Directory.GetDirectoryEntry(), Directory);
             _ = TopLevel.SubOUs;
-            RootOU = new HashSet<IADOrganizationalUnit>() { TopLevel };
+            RootOU = new HashSet<IDirectoryEntryAdapter>() { TopLevel };
         }
         if (StartingSelectedOU == null)
         {
@@ -181,37 +180,34 @@
             //newExpandedNodes.Add(TopLevel);
             if (!SelectedOU.Equals(RootOU))
             {
-                IADOrganizationalUnit? openThis = RootOU.First();
+                IDirectoryEntryAdapter? openThis = RootOU.First();
                 openThis.IsExpanded = true;
-                while (openThis != null)
-                {
-                    var child = openThis.SubOUs.Where(c => SelectedOU.DN.Contains(c.DN) && !SelectedOU.DN.Equals(c.DN)).FirstOrDefault();
-                    if (child != null)
-                    {
-                        child.IsExpanded = true;
-                        openThis = child;
-                    }
-                    else
-                    {
-                        var matchingOU = openThis.SubOUs.Where(c => SelectedOU.DN.Equals(c.DN)).FirstOrDefault();
-                        if (matchingOU!=null)
-                            matchingOU.IsSelected = true;
-                        break;
-                    }
+                //while (openThis != null)
+                //{
+                //    var child = openThis.Children.Where(c => SelectedOU.DN.Contains(c.DN) && !SelectedOU.DN.Equals(c.DN)).FirstOrDefault();
+                //    if (child != null)
+                //    {
+                //        child.IsExpanded = true;
+                //        openThis = child;
+                //    }
+                //    else
+                //    {
+                //        var matchingOU = openThis.Children.Where(c => SelectedOU.DN.Equals(c.DN)).FirstOrDefault();
+                //        if (matchingOU!=null)
+                //            matchingOU.IsSelected = true;
+                //        break;
+                //    }
 
                         
-                    //newExpandedNodes.Add(openThis);
-                }
+                //}
             }
         }
-        //ExpandedNodes = newExpandedNodes;
-        //InvokeAsync(StateHasChanged);
 
 
     }
 
 
-    async Task<HashSet<IADOrganizationalUnit>> GetChildrenAsync(IADOrganizationalUnit parentNode)
+    async Task<HashSet<IDirectoryEntryAdapter>> GetChildrenAsync(IDirectoryEntryAdapter parentNode)
     {
         return await Task.Run(() =>
             {
@@ -220,10 +216,10 @@
             });
     }
 
-    HashSet<IADOrganizationalUnit> GetChildren(IADOrganizationalUnit parentNode)
+    HashSet<IDirectoryEntryAdapter> GetChildren(IDirectoryEntryAdapter parentNode)
     {
 
-        var children = parentNode.TreeViewSubOUs;
+        var children = parentNode.Children.ToHashSet();
 
         return children;
 
