--- a/BLAZAMGui/Layouts/MainLayout.razor
+++ b/BLAZAMGui/Layouts/MainLayout.razor
@@ -77,7 +77,7 @@
                     <MudStack Class="mud-width-full pa-0 ma-0 ps-3" Row=true>
                         <AppFooter Class="align-middle"/>
                         
-                        @*<AppChat/>*@
+                        <AppChat/>
                     </MudStack>
                 </MudAppBar>
                 <NotificationBroadcastListener />
